# linux_ws_exercise

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.cfg
.github/workflows/: autotools.yml  build-script.yml  cmake.yml  python-package.yml
computeCirc_v1.1/: CMakeLists-fortran.txt  CMakeLists.txt  HISTORY  MANIFEST.in  Makefile.am  README  README.compile  README_compile.txt  config.h.in  configure.ac  make_computeC  pyproject.toml  setup.cfg  setup.py
computeCirc_v1.1/include/: const.h
computeCirc_v1.1/input/: computeC.input  computeC_ORIGINAL.input
computeCirc_v1.1/src/: CMakeLists.txt  Makefile  __main__.py  _cy_circ.pyx  circ.f  circ.f90  circ.py  circ.pyx  const.py  interp.f  interp.f90  interp.py  main.f  main.py  netcdfio.f  netcdfio.py
computeCirc_v1.1/src/computeCirc/: CMakeLists.txt  __init__.py  circ.f90  const.py  interp.f90  interp.py  main.f  netcdfio.py
