[build-system]
requires = [
    "setuptools>=42",
    "numpy",
    "scikit-build",
    "cmake; sys_platform!='cygwin'",
    "ninja; sys_platform!='cygwin'",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.black]

[tool.pydocstringformatter]
write = true
style = ["pep257", "numpydoc"]

[tool.mypy]
# strict = true
files = "src/computeCirc/*.py"
