[metadata]
name = computeCirc
version = 1.1
description = Compute circulation around model grid points
long_description = file: README, README_compile.txt HISTORY
long_description_content_type = text/plain
keywords = meteorology, circulation, atmospheric science
license = BSD 3-Clause License
license_file=../LICENSE
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Topic :: Education
    Topic :: Scientific/Engineering :: Atmospheric Science
    Typing :: Typed
url = https://github.com/DWesl/linux_ws_exercise
author=ShawnMurd


[options]
zip_safe = False
install_requires =
    numpy
    numexpr
    netCDF4

[flake8]
extend-ignore = E203, E501, D413
extend-select = B950
rst-roles =
    py:func
